# endjine

./: .codespellignore  .deny.toml  .gitignore  .justfile  .markdownlint-cli2.yaml  .oxfmtrc.jsonc  .pre-commit-config.yaml  .prettierrc.yaml  .rustfmt.toml  .yamlfmt  Cargo.lock.license  Cargo.toml  README.md
.github/: dependabot.yaml
.github/workflows/: build-cli.yaml  pre-commit.yaml  test.yaml
endjine/: Cargo.toml
endjine-cli/: Cargo.toml
endjine-cli/src/: main.rs
endjine/src/: album_art.rs  batch.rs  changelog.rs  database.rs  db_id.rs  historylist.rs  lib.rs  pack.rs  performance.rs  playlist.rs  preparelist.rs  track.rs  unix_timestamp.rs
endjine/src/batch/: find_track_file_issues.rs  purge_album_art.rs
examples/: endjine.rs  housekeeping.rs
src/: album_art.rs  batch.rs  changelog.rs  db_id.rs  db_uuid.rs  historylist.rs  information.rs  lib.rs  models.rs  pack.rs  performance.rs  playlist.rs  preparelist.rs  smartlist.rs  track.rs  util.rs
src/batch/: reset_album_art.rs  shrink_album_art.rs  shrink_album_art_images.rs
src/smartlist/: rules.rs
