# SPDX-FileCopyrightText: The endjine authors
# SPDX-License-Identifier: CC0-1.0

[package]
name = "endjine"
description = "Accessing the Engine DJ library database."
version = "0.0.6"
edition = "2024"
rust-version = "1.88"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/uklotzde/endjine"
keywords = ["engine", "dj", "database", "music", "library"]
categories = ["database", "multimedia"]
include = ["README.md", "LICENSES/", "src/"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
image = "0.25.6"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["sqlite", "time", "uuid"] }

[dependencies.futures-util]
version = "0.3.31"
optional = true

[dependencies.log]
version = "0.4.27"
optional = true

[dependencies.tokio]
version = "1.47.1"
optional = true
features = ["rt-multi-thread"]

[features]
default = ["batch"]
batch = ["dep:futures-util", "dep:log", "dep:tokio"]

[dev-dependencies]
anyhow = "1.0.99"
colored = "3.0.0"
env_logger = "0.11.8"
sqlx = { version = "0.8.6", features = ["runtime-tokio"] }
tokio = { version = "1.47.1", features = ["full"] }

[lints.rust]
future_incompatible = "warn"
let_underscore = "warn"
missing_debug_implementations = "warn"
rust_2018_idioms = "warn"
rust_2021_compatibility = "warn"
rust_2024_compatibility = "warn"
unreachable_pub = "warn"
unsafe_code = "warn"
unused = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
clone_on_ref_ptr = "warn"
missing_const_for_fn = "warn"
mod_module_files = "warn"

# Errors should be self-documenting.
missing_errors_doc = "allow"
