# SPDX-FileCopyrightText: The endjine authors
# SPDX-License-Identifier: CC0-1.0

[workspace]
members = ["endjine", "endjine-cli"]
# Enforce MSRV-aware package resolver.
resolver = "3"

[workspace.package]
version = "0.0.6"
edition = "2024"
rust-version = "1.92"
license = "MPL-2.0"
repository = "https://github.com/uklotzde/endjine"

[workspace.dependencies]
endjine = { path = "endjine" }

anyhow = "1.0.100"
futures-util = "0.3.31"
image = "0.25.9"
itertools = "0.14.0"
log = "0.4.29"
relative-path = "2.0.1"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["sqlite", "time", "uuid"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }

[workspace.lints.rust]
future_incompatible = "warn"
let_underscore = "warn"
missing_debug_implementations = "warn"
rust_2018_idioms = "warn"
rust_2021_compatibility = "warn"
rust_2024_compatibility = "warn"
unreachable_pub = "warn"
unsafe_code = "warn"
unused = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
clone_on_ref_ptr = "warn"
missing_const_for_fn = "warn"
mod_module_files = "warn"

# Errors should be self-documenting.
missing_errors_doc = "allow"
